--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "dev": "nodemon index.js",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --legacy-peer-deps"
   },
   "keywords": [],
   "author": "",
