--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.3",
